# QT6-trial

./: .gitignore  CMakeLists.txt  CameraView.qml  Main.qml  MapPage.qml  MissionPage.qml  README.md  SettingsPage.qml  TelemetryPage.qml  build_error.txt  error_out.txt  main.cpp
src/: QGCApplication.h  QGCLoggingCategory.h
src/QtLocationPlugin/: CMakeLists.txt  QGCCachedTileSet.cpp  QGCMapUrlEngine.cpp  QGeoFileTileCacheQGC.cpp  QGeoMapReplyQGC.cpp
src/QtLocationPlugin/Providers/: ElevationMapProvider.cpp  EsriMapProvider.cpp  GenericMapProvider.cpp  MapboxMapProvider.cpp
src/QtLocationPlugin/QMLControl/: QGCMapEngineManager.cc  QmlObjectListModel.cpp  QmlObjectListModel.h
