cmake_minimum_required(VERSION 3.16)

project(dronetakip VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick QuickLayouts Positioning Location)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appdronetakip
    main.cpp
)

qt_add_qml_module(appdronetakip
    URI dronetakip
    QML_FILES
        Main.qml
        MapPage.qml
        TelemetryPage.qml
        MissionPage.qml
        SettingsPage.qml
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appdronetakip PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appdronetakip
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appdronetakip
    PRIVATE Qt6::Quick Qt6::QuickLayouts Qt6::Positioning Qt6::Location
)

include(GNUInstallDirs)
install(TARGETS appdronetakip
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
